# onwards

./: .gitignore  .terraformignore  Cargo.toml  Dockerfile  README.md  samconfig.toml  template.yaml
.github/workflows/: check.yml  scheduled.yml  terraform-apply.yml  terraform-plan.yml  test.yml
infra/: .gitignore  .terraform.lock.hcl  apigw.tf  cloudfront.tf  dashboard.tf  domain.tf  lambda.tf  logging.tf  main.tf  r4r.fyi.tfstate  terraform.tf  terraform.tfstate  terraform.tfvars
sam/: config.toml  template.yaml
src/: lambda.rs  lib.rs  main.rs
tests/: e2e.rs
