[package]
name = "onwards-api"
version = "0.1.0"
edition = "2021"
default-run = "onwards-api"

[features]
default = []

[dependencies]
aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67.0"
aws-smithy-types = "1.0.1"
aws-smithy-runtime-api = "1.8.0"
aws-smithy-http = "0.62.1"
axum = "0.8.3"
http = "1.0"
http-body-util = "0.1.3"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
lambda_http = { version = "0.15.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.14.1"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tower-service = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
url = "2.5.4"

[dev-dependencies]
tower-http = { version = "0.6", features = ["limit", "trace", "fs"] }
reqwest = "0.12.20"
url = "2.5.4"

[[bin]]
name = "lambda"
path = "./src/lambda.rs"
